# tauri-playground

combined-recorder/: package-lock.json  package.json
combined-recorder-visualization/: package-lock.json  package.json
combined-recorder-visualization/src/: App.css  App.tsx  WaveformVisualization.tsx
combined-recorder-visualization/src-tauri/: Cargo.toml  tauri.conf.json
combined-recorder-visualization/src-tauri/src/: lib.rs  main.rs
combined-recorder/src/: App.css  App.tsx
combined-recorder/src-tauri/: Cargo.toml  tauri.conf.json
combined-recorder/src-tauri/src/: lib.rs  main.rs
hello-world/: index.html
hello-world/src/: main.ts
hello-world/src-tauri/: tauri.conf.json
menubar/: index.html  package-lock.json  package.json
menubar/src/: main.ts
menubar/src-tauri/: Cargo.toml  tauri.conf.json
menubar/src-tauri/src/: lib.rs
mic-recorder/src/: App.css  App.tsx
mic-recorder/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
mic-recorder/src-tauri/src/: lib.rs
pop-up-window/: coachee-App.css  coachee-lib.rs  coachee-tauri.conf.json  index.html
pop-up-window/src/: App.css  App.tsx
pop-up-window/src-tauri/: Cargo.toml  tauri.conf.json
pop-up-window/src-tauri/capabilities/: default.json
pop-up-window/src-tauri/src/: lib.rs
popup-recorder/: package-lock.json  package.json
popup-recorder/src/: App.css  App.tsx  WaveformVisualization.tsx
popup-recorder/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
popup-recorder/src-tauri/src/: lib.rs  main.rs
system-audio-recorder/src/: App.css  App.tsx
system-audio-recorder/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
system-audio-recorder/src-tauri/src/: lib.rs  main.rs
