[package]
name = "system-audio-recorder"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "combined_recorder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
screencapturekit = { version = "1.5.0", features = ["macos_15_0", "async"] }
hound = "3.5.1"
anyhow = "1.0.102"
tokio = { version = "1.49.0", features = ["full"] }
once_cell = "1.21.3"
parking_lot = "0.12.5"
cpal = "0.17.3"

