[package]
name = "menubar"
version = "0.1.0"
description = "A macOS menubar app"
authors = ["you"]
edition = "2021"

[lib]
name = "menubar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
